<resources>
    <string name="app_name">HW_2_6</string>
    <string name="email_input">Email Address</string>
    <string name="password_input">Password</string>
    <string name="confirm_password_input">Confirm Password</string>
    <string name="search_input">Search</string>
    <string name="log_in_button">Log in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="main_title">Choose the\n<b>Food you love</b></string>
    <string name="sign_up_title">Sign up</string>
    <string name="category">Category</string>
    <string name="category_burgers">Burgers</string>
    <string name="category_pizza">Pizza</string>
    <string name="category_chicken">Chicken</string>
    <string name="or">OR</string>
    <string name="sign_with_google">Sign in with Google</string>
    <string name="sign_with_facebook">Sign in with Facebook</string>
</resources>