<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">
    
    <FrameLayout
        android:layout_width="375dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="66dp">

        <ImageView
            android:src="@drawable/ic_left_arrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="24dp"
            />
        
        <TextView
            android:text="@string/sign_up_title"
            android:textSize="18sp"
            android:textColor="@color/second_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/signUpLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="130dp">

        <EditText
            android:id="@+id/emailInput"
            android:hint="@string/email_input"
            style="@style/CustomInput"/>

        <EditText
            android:id="@+id/passwordInput"
            android:hint="@string/password_input"
            android:inputType="textPassword"
            style="@style/CustomInput"
            android:layout_marginVertical="16dp"/>

        <EditText
            android:id="@+id/confirmPasswordInput"
            android:hint="@string/confirm_password_input"
            android:inputType="textPassword"
            style="@style/CustomInput"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logInButton"
            style="@style/LogInButton"
            android:layout_marginTop="47dp"
            />
    </LinearLayout>
    
    <FrameLayout
        android:layout_width="327dp"
        android:layout_height="31dp"
        app:layout_constraintTop_toBottomOf="@id/signUpLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="47dp"
        >
        <FrameLayout
            android:background="@color/or_line"
            android:layout_width="137dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:text="@string/or"
            android:textColor="@color/second_black"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
        <FrameLayout
            android:background="@color/or_line"
            android:layout_width="137dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical|end"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>